tests/vendor/valid/simple/use_assignment_result.c
//expect 4
//tags: simple, assignment, variables
int main() {

    int a = 1;
    int b = 2;
    return a = b = 4;
}
