tests/vendor/invalid/syntax/statement_in_condition.c
//tags: simple, loop
int main() {
    while(int a) {
        2;
    }
}